#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-08
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-02-07
2014-10-23 David Schneider
- regenerate for new pdsdata 8.1.8/psddldata V01-00-19 with Epix::Config100aV1 and Epix::ElementV2
  Track JIRA issue PSAS-56

Tag: V00-02-06
2014-10-15 David Schneider
- regenerate for new pdsdata 8.1.7/psddldata V01-00-18 with Bld::BldDataSpectrometerV1
  Track JIRA issue PSAS-50

Tag: V00-02-05
2014-10-03 David Schneider
	- regenerate for new pdsdata 8.1.4/psddldata with:
	Evr::IOConfigV2. Track JIRA issue PSAS-41

Tag: V00-02-04
2014-09-29 David Schneider
- minor adjustment to default.cfg
	
Tag: V00-02-03
2014-09-24 David Schneider
- add option Translator.H5Output.printenv for h5-mpi-translate to print environment
- adjust trace/debug printout, adjust time reporting
- have mpi unit tests clean up after themselves
	
Tag: V00-02-02
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1

Tag: V00-02-01
2014-09-16 David Schneider
- Fix some bugs with mpi based split scan. Not production ready.
- instrument code with macros for printing debug/trace messages.
	
Tag: V00-02-00
2014-09-03 David Schneider
- Introduce mpi based split scan. Adds dependency on openmpi.
- Some cleanup/refactoring. Make some H5Output functionality public
  so it can be accessed from H5MpiTranslateApp	

Tag: V00-01-30
2014-08-06 David Schneider