@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-09
+2015-1-29 David Schneider
+- add option fast_index for MPI Split scan. Track JIRA issue PSAS-98
+	
 Tag: V00-02-08
 2014-11-25 David Schneider
 - regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
